--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0"
+    "react-native-screens": "~3.22.0",
+    "react-native-shared-element": "^0.8.9",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
